<resources>
    <string name="app_name">LOAD MANAGER</string>
    <string name="new_to_load_manager">New to Load Manager</string>
    <string name="user_name_email_id">User name/Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="email_id">Email id</string>
    <string name="password1">Password</string>
    <string name="post_load">Post Load</string>
    <string name="find_load">Find Load</string>
    <string name="load_details">Load details</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="contact_number">Contact number</string>
    <string name="post">Post</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
</resources>